Added Hero.java- updated/added lines in Building.java and Unit.java